--- a/DataExploration-HighLevel.ipynb
+++ b/DataExploration-HighLevel.ipynb
@@ -38,13 +38,13 @@
    "metadata": {},
    "source": [
     "## Role of columns\n",
-    "Page name\n",
-    "Traffic per day"
+    "0. Page name\n",
+    "1... Traffic per day"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -63,9 +63,9 @@
    "source": [
     "# import data into pandas datafram\n",
     "import pandas as pd\n",
-    "data = pd.read_csv('copytrain1000.csv')\n",
+    "chunk1 = pd.read_csv('copytrain1000.csv')\n",
     "# get ourselves a usable chunk with interesting names\n",
-    "exploratory_chunk = data[12:17]\n",
+    "exploratory_chunk = chunk1[12:17]\n",
     "# is there a neater way of doing the below? I wanted a 'range' of the columns\n",
     "print(exploratory_chunk[exploratory_chunk.columns[0:3]])"
    ]
@@ -162,7 +162,7 @@
    "metadata": {},
    "source": [
     "## Try other pages\n",
-    "Total of 145064 pages"
+    "Total of 145,064 pages"
    ]
   },
   {
@@ -185,7 +185,9 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "! head -n 1 train_1.csv > copyTrain_chunk2.csv\n",
@@ -202,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -224,6 +226,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### No spiders in this chunk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len([page_name for page_name in chunk2['Page'].values if 'spider' not in page_name])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Merge them in order to make some kind of comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "china  0              2NE1_zh.wikipedia.org_all-access_spider\n",
+      "       1               2PM_zh.wikipedia.org_all-access_spider\n",
+      "       2                3C_zh.wikipedia.org_all-access_spider\n",
+      "       3           4minute_zh.wikipedia.org_all-access_spider\n",
+      "       4    52_Hz_I_Love_You_zh.wikipedia.org_all-access_s...\n",
+      "Name: Page, dtype: object\n",
+      "russia  0    Иглесиас,_Энрике_ru.wikipedia.org_mobile-web_a...\n",
+      "        1    Николай_Чудотворец_ru.wikipedia.org_mobile-web...\n",
+      "        2        Канада_ru.wikipedia.org_mobile-web_all-agents\n",
+      "        3    Гумилёв,_Николай_Степанович_ru.wikipedia.org_m...\n",
+      "        4    Жуковский,_Василий_Андреевич_ru.wikipedia.org_...\n",
+      "Name: Page, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "both_chunks = pd.concat([chunk1, chunk2], keys=['china', 'russia'])\n",
+    "print(both_chunks[0:5]['Page'])\n",
+    "print(both_chunks[999:1004]['Page'])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -238,6 +304,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
