--- a/DataExploration.ipynb
+++ b/DataExploration.ipynb
@@ -9,11 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-7fb02f5e5287>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-7fb02f5e5287>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    head -n 1000 train_1.csv > work/copytrain1000.csv\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "head -n 1000 train_1.csv > work/copytrain1000.csv"
    ]
@@ -75,7 +82,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The below attempts to load the file into a squlite database. It took a long time to crash so perhaps we are getting closer. I probably need to upgrade the droplet/server!"
+   ]
   },
   {
    "cell_type": "code",
