rounds means to argue less with Kaggle

--- a/notebooks/team_notebook.ipynb
+++ b/notebooks/team_notebook.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "_cell_guid": "092bedd9-d0e1-4eff-9540-6f0bcbc44e73",
     "_execution_state": "idle",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "_cell_guid": "ca4964cf-4e1a-45cf-9f08-540eaeb2ed90",
     "_execution_state": "idle",
@@ -259,7 +259,7 @@
        "[5 rows x 550 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "_cell_guid": "9b2c686c-fda4-4f3b-9621-243b3a43c040",
     "_execution_state": "idle",
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "_cell_guid": "f2807ab8-1600-4a5d-95db-34fb35fde386",
     "_execution_state": "idle",
@@ -352,7 +352,7 @@
        "4      5.240506"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {
     "_cell_guid": "877bf1b4-0210-4cbe-8080-fdf7799dcf3a",
     "_execution_state": "idle",
@@ -439,7 +439,7 @@
        "4      5.240506  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,9 +452,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -521,7 +523,7 @@
        "4          5.24  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "_cell_guid": "1ea30352-9d12-47cc-b848-a86e7465c9fc",
     "_execution_state": "busy",
@@ -607,7 +609,7 @@
        "4  !vote_en.wikipedia.org_all-access_all-agents_2...  fa012434263a"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,6 +618,73 @@
     "import pandas as pd\n",
     "ss_df = pd.read_csv('../input/key_1.csv')\n",
     "ss_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Page</th>\n",
+       "      <th>Id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8703775</th>\n",
+       "      <td>龙生九子_zh.wikipedia.org_mobile-web_all-agents_20...</td>\n",
+       "      <td>f69747f5ee68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8703776</th>\n",
+       "      <td>龙生九子_zh.wikipedia.org_mobile-web_all-agents_20...</td>\n",
+       "      <td>2489963dc503</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8703777</th>\n",
+       "      <td>龙生九子_zh.wikipedia.org_mobile-web_all-agents_20...</td>\n",
+       "      <td>b0624c909f4c</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8703778</th>\n",
+       "      <td>龙生九子_zh.wikipedia.org_mobile-web_all-agents_20...</td>\n",
+       "      <td>24a1dfb06c10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8703779</th>\n",
+       "      <td>龙生九子_zh.wikipedia.org_mobile-web_all-agents_20...</td>\n",
+       "      <td>add681d54216</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                      Page            Id\n",
+       "8703775  龙生九子_zh.wikipedia.org_mobile-web_all-agents_20...  f69747f5ee68\n",
+       "8703776  龙生九子_zh.wikipedia.org_mobile-web_all-agents_20...  2489963dc503\n",
+       "8703777  龙生九子_zh.wikipedia.org_mobile-web_all-agents_20...  b0624c909f4c\n",
+       "8703778  龙生九子_zh.wikipedia.org_mobile-web_all-agents_20...  24a1dfb06c10\n",
+       "8703779  龙生九子_zh.wikipedia.org_mobile-web_all-agents_20...  add681d54216"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ss_df.tail()"
    ]
   },
   {
@@ -632,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {
     "_cell_guid": "be74cc7b-4746-45a2-9074-54d16ed0ed25",
     "_execution_state": "busy",
@@ -693,7 +762,7 @@
        "4  !vote_en.wikipedia.org_all-access_all-agents  01-05"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {
     "_cell_guid": "7f52da5f-21e0-4cf7-bbed-9bed14378d27",
     "_execution_state": "busy",
@@ -738,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {
     "_cell_guid": "a8285f53-757e-4872-af11-bbd76ca7e58c",
     "_uuid": "3a709a0e0896d58e1520b55bea7439d32df5f629",
@@ -769,7 +838,7 @@
        " '02-26']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "metadata": {
     "_cell_guid": "62c60795-6e9f-4a12-96af-3e419a780bfc",
     "_execution_state": "busy",
@@ -847,7 +916,7 @@
        "52_Hz_I_Love_You_zh.wikipedia.org_all-access_sp...          4.68          5.24"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -873,7 +942,7 @@
        "3.48"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 19,
    "metadata": {
     "_cell_guid": "0dab60b4-61e1-453b-b06a-469e89108963",
     "_execution_state": "busy",
@@ -1014,7 +1083,7 @@
        "13  !vote_en.wikipedia.org_all-access_all-agents_2...  ab5ccefaa2db    3.48"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 20,
    "metadata": {
     "_cell_guid": "2dc0e555-7efb-4fea-a4d8-cf6bb1ac7be9",
     "_execution_state": "busy",
@@ -1073,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "metadata": {
     "_cell_guid": "3ca7f296-6a2b-4ed5-9ce2-98b862ed0f4d",
     "_execution_state": "busy",
@@ -1089,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 22,
    "metadata": {
     "_cell_guid": "321d0834-ee61-4c30-91e3-6717fa2a11cd",
     "_execution_state": "busy",
@@ -1150,7 +1219,7 @@
        "4  fa012434263a    3.40"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1161,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 23,
    "metadata": {
     "_cell_guid": "df5f9f2b-11a5-431b-869a-a6d3d1ac8d6a",
     "_execution_state": "busy",
@@ -1222,7 +1291,7 @@
        "8703779  add681d54216  135.96"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,6 +1299,15 @@
    "source": [
     "test.tail()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
